--- a/page_new.html
+++ b/page_new.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Korean Police | Page New</title>
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- CSS Styles -->
     <style>
       /* Root styles */
@@ -154,19 +160,13 @@
         gap: 20px;
       }
 
-
       .column {
-  flex: 1;
-   /* har bir ustun teng kenglikka ega bo'ladi */
-   display: flex;
-   flex-direction: column;
-  gap: 20px;
-}
-.column div{
-  width: 100%;
-  border: 1px solid red;
-  height: 200px;
-}
+        flex: 1;
+        /* har bir ustun teng kenglikka ega bo'ladi */
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
 
       .calendar-header {
         display: flex;
@@ -194,17 +194,20 @@
         font-size: 12px;
       }
 
-      th, td {
+      th,
+      td {
         text-align: center;
         cursor: pointer;
         border: 1px solid #3376b8;
       }
 
-      .month_info th, .month_info td {
+      .month_info th,
+      .month_info td {
         padding: 5px;
       }
 
-      .calendar_info th, .calendar_info td {
+      .calendar_info th,
+      .calendar_info td {
         padding: 20px;
       }
 
@@ -245,10 +248,37 @@
       button.red {
         background-color: #ff0000;
       }
+
       button.green {
         background-color: #008f0a;
       }
       /* /Main Content Header */
+
+      .news_block, .news_dataroom{
+        border: 1px solid #3376b8;
+        border-radius: 8px;
+        text-align: start;
+        padding: 10px;
+      }
+
+      .news_block ol, .news_dataroom ol {
+        padding: 0 15px;
+      }
+
+      .news_block ol li, .news_dataroom ol li{
+        margin: 10px 0;
+        max-width: 250px;
+        white-space: nowrap;
+        overflow: hidden;
+        list-style-position: inside;
+        text-overflow: ellipsis;
+      }
+
+      .column_1{
+        border: 1px solid #3376b8;
+        border-radius: 8px;
+        padding: 10px;
+      }
     </style>
   </head>
 
@@ -256,7 +286,11 @@
     <!-- Header section -->
     <div class="container">
       <header class="header">
-        <img src="https://lustrous-buttercream-7631ed.netlify.app/img/logo.png" alt="Logo" class="brand" />
+        <img
+          src="https://lustrous-buttercream-7631ed.netlify.app/img/logo.png"
+          alt="Logo"
+          class="brand"
+        />
         <div>
           <h2>서울경찰청</h2>
           <p>서울지방경찰청 초과근무 통합시스템</p>
@@ -308,7 +342,6 @@
           <div class="content__data">
             <div class="calendar">
               <div class="calendar-header">
-
                 <input type="month" id="monthPicker" />
 
                 <table class="month_info">
@@ -343,32 +376,71 @@
                 </thead>
                 <tbody id="calendarBody"></tbody>
               </table>
-
             </div>
 
             <div class="content__info">
-              <div class="column">
-                <div class="news">
+
+              <div class="column column_1">
+                <div class="news_block">
                   <h2>공지시항</h2>
+
+                  <ol reversed>
+                    <li>000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000</li>
+                    <li>000000000000000000000000000000000000000000</li>
+                    <li>★4월3일 10시~14시 긴급점검★</li>
+                    <li>25. 4. 1. new시스템 도입</li>
+                  </ol>
+                </div>
+
+                <div class="news_dataroom">
+                  <h2>공지시항</h2>
+
+                  <ol reversed>
+                    <li>000000000000000000000000000000000000000000</li>
+                    <li>000000000000000000000000000000000000000000</li>
+                    <li>★4월3일 10시~14시 긴급점검★</li>
+                    <li>25. 4. 1. new시스템 도입</li>
+                  </ol>
+                </div>
+              </div>
+
+              <div class="column">
+                <div>
+                  <h2>Nimadur</h2>
                   <div>
-                    <ul>
-                      <li>000000000000000000000000000000000000000000</li>
-                      <li>000000000000000000000000000000000000000000</li>
-                      <li>★4월3일 10시~14시 긴급점검★</li>
-                      <li>25. 4. 1. new시스템 도입</li>
-                    </ul>
+                    <div>
+                      <img src="" alt="LOGO">
+                      <button>button</button>
+                    </div>
+                    <div>
+                      <img src="" alt="LOGO">
+                      <button>button</button>
+                    </div>
+                    <div>
+                      <img src="" alt="LOGO">
+                      <button>button</button>
+                    </div>
                   </div>
                 </div>
                 <div>
-                  
+                  <div>
+                    <div>
+                      <h2>Nimalar ...</h2>
+                    <button>button</button>
+                    </div>
+                    <img src="" alt="LOGO">
+                  </div>
+
+                  <div>
+                    <div>
+                      <h2>Nimalar ...</h2>
+                    <button>button</button>
+                    </div>
+                    <img src="" alt="LOGO">
+                  </div>
                 </div>
               </div>
-              <div class="column">
-                <div></div>
-                <div></div>
-              </div>
             </div>
-
           </div>
         </div>
         <!-- Main Content -->
@@ -378,58 +450,60 @@
 
     <!-- JS -->
     <script>
-// Hozirgi sana va oyni olish
-const calendarBody = document.getElementById("calendarBody");
-const monthPicker = document.getElementById("monthPicker");
+      // Hozirgi sana va oyni olish
+      const calendarBody = document.getElementById("calendarBody");
+      const monthPicker = document.getElementById("monthPicker");
 
-let currentDate = new Date();
+      let currentDate = new Date();
 
-// Kalendarni render qilish funksiyasi
-function renderCalendar(date) {
-  const year = date.getFullYear();
-  const month = date.getMonth();
+      // Kalendarni render qilish funksiyasi
+      function renderCalendar(date) {
+        const year = date.getFullYear();
+        const month = date.getMonth();
 
-  // Oyning birinchi va oxirgi kunini olish
-  const firstDay = new Date(year, month, 1).getDay();
-  const lastDate = new Date(year, month + 1, 0).getDate();
+        // Oyning birinchi va oxirgi kunini olish
+        const firstDay = new Date(year, month, 1).getDay();
+        const lastDate = new Date(year, month + 1, 0).getDate();
 
-  // Kalendarni tozalash
-  calendarBody.innerHTML = "";
+        // Kalendarni tozalash
+        calendarBody.innerHTML = "";
 
-  // Kalendarni to'ldirish
-  let day = 1;
-  for (let i = 0; i < 6; i++) {
-    const row = document.createElement("tr");
+        // Kalendarni to'ldirish
+        let day = 1;
+        for (let i = 0; i < 6; i++) {
+          const row = document.createElement("tr");
 
-    for (let j = 0; j < 7; j++) {
-      const cell = document.createElement("td");
+          for (let j = 0; j < 7; j++) {
+            const cell = document.createElement("td");
 
-      if (i === 0 && j < firstDay) {
-        cell.textContent = ""; // Bo'sh hujayra
-      } else if (day > lastDate) {
-        cell.textContent = ""; // Bo'sh hujayra
-      } else {
-        cell.textContent = day; // Kunning raqami
-        day++;
+            if (i === 0 && j < firstDay) {
+              cell.textContent = ""; // Bo'sh hujayra
+            } else if (day > lastDate) {
+              cell.textContent = ""; // Bo'sh hujayra
+            } else {
+              cell.textContent = day; // Kunning raqami
+              day++;
+            }
+
+            row.appendChild(cell);
+          }
+
+          calendarBody.appendChild(row);
+        }
       }
 
-      row.appendChild(cell);
-    }
+      // Oy o'zgarganda kalendarni yangilash
+      monthPicker.addEventListener("change", () => {
+        const [year, month] = monthPicker.value.split("-").map(Number);
+        currentDate = new Date(year, month - 1, 1);
+        renderCalendar(currentDate);
+      });
 
-    calendarBody.appendChild(row);
-  }
-}
-
-// Oy o'zgarganda kalendarni yangilash
-monthPicker.addEventListener("change", () => {
-  const [year, month] = monthPicker.value.split("-").map(Number);
-  currentDate = new Date(year, month - 1, 1);
-  renderCalendar(currentDate);
-});
-
-// Boshlang'ich qiymatni o'rnatish
-monthPicker.value = `${currentDate.getFullYear()}-${String(currentDate.getMonth() + 1).padStart(2, "0")}`;
-renderCalendar(currentDate);
+      // Boshlang'ich qiymatni o'rnatish
+      monthPicker.value = `${currentDate.getFullYear()}-${String(
+        currentDate.getMonth() + 1
+      ).padStart(2, "0")}`;
+      renderCalendar(currentDate);
     </script>
   </body>
 </html>
